# proxmox-metrics

./: .coverage  .dockerignore  .env.example  .gitignore  COMPLETION_SUMMARY.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  TESTING.md  alerts.py  alerts_history.json  docker-compose.yml  health_check.py  main.py  pyproject.toml
.gitea/workflows/: deploy.yaml
.gittea/workflows/: deploy.yaml
config/: config.empty.yaml  config.yaml
docs/: DOCKER_SETUP.md  FEATURE_BRANCH.md  FIRST_START_IMPLEMENTATION.md  INDEX.md  PASSWORD_IMPLEMENTATION.md  README.md  RELEASE_NOTES.md  STRUCTURE.md
docs/updates/: AIOGRAM_UPGRADE.md  README.md  update-2026-05-14-auto-password.md  update-2026-05-14-bot-token-env.md  update-2026-05-14-container-vm-monitoring.md  update-2026-05-14-docker-support.md  update-2026-05-14-first-start-setup.md
scripts/: entrypoint.sh  install.sh  run_act_host.sh  setup.sh  update_token.py  verify_syntax.py
src/: __init__.py  __main__.py  alerts.py  alerts_history.py  first_start_setup.py  main.py  proxmox.py  telegram.py  telegram_bot.py
src/tests/: README.md  __init__.py  conftest.py  test_alerts.py  test_alerts_history.py  test_first_start_password.py  test_health_check.py  test_integration.py  test_proxmox.py  test_telegram_bot.py  test_verify_syntax_script.py
systemd/: proxmox-monitor.service  proxmox-monitor.timer
