[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxmox-monitor"
version = "1.0.0"
description = "Proxmox VE monitoring with Telegram notifications"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.7",
    "pyyaml>=6.0",
    "psutil>=5.9"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

