[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxmox-monitor"
version = "1.2.3.0"
description = "Proxmox VE monitoring with Telegram notifications"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"


